@@ -3,10 +3,10 @@ package uk.gov.hmcts.reform.finrem.caseorchestration.handler;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
+import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.finrem.caseorchestration.helper.GeneralApplicationHelper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.CaseType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType;
@@ -19,6 +19,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_CREATED_BY;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_LIST;
@@ -27,7 +28,8 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class RejectGeneralApplicationAboutToStartHandler implements CallbackHandler, GeneralApplicationHandler {
+public class RejectGeneralApplicationAboutToStartHandler
+    implements CallbackHandler<Map<String, Object>>, GeneralApplicationHandler {
 
     private final GeneralApplicationHelper helper;
 
@@ -39,8 +41,9 @@ public class RejectGeneralApplicationAboutToStartHandler implements CallbackHand
     }
 
     @Override
-    public AboutToStartOrSubmitCallbackResponse handle(CallbackRequest callbackRequest,
-                                                       String userAuthorisation) {
+    public GenericAboutToStartOrSubmitCallbackResponse<Map<String, Object>> handle(
+        CallbackRequest callbackRequest,
+        String userAuthorisation) {
         CaseDetails caseDetails = callbackRequest.getCaseDetails();
         log.info("Received on start request to reject general application for Case ID: {}", caseDetails.getId());
         Map<String, Object> caseData = caseDetails.getData();
@@ -52,10 +55,10 @@ public class RejectGeneralApplicationAboutToStartHandler implements CallbackHand
         } else {
             List<DynamicListElement> dynamicListElements = existingGeneralApplicationList.stream()
                 .map(ga -> getDynamicListElements(ga.getId(), getLabel(ga.getGeneralApplicationItems(), index.incrementAndGet())))
-                .toList();
+                .collect(Collectors.toList());
 
             if (dynamicListElements.isEmpty()) {
-                return AboutToStartOrSubmitCallbackResponse.builder().data(caseData)
+                return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData)
                     .errors(List.of("There is no general application available to reject.")).build();
             }
 
@@ -65,7 +68,7 @@ public class RejectGeneralApplicationAboutToStartHandler implements CallbackHand
         }
 
         caseData.remove(GENERAL_APPLICATION_REJECT_REASON);
-        return AboutToStartOrSubmitCallbackResponse.builder().data(caseData).build();
+        return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData).build();
     }
 
     private void setNonCollectionGeneralApplication(Map<String, Object> caseData,
